# EUS_Desktop

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md
src-tauri/src/: auth.rs  commands.rs  db.rs  error.rs  lib.rs  main.rs  state.rs
src/components/: AboutModal.tsx
src/components/admin/: StatementModal.tsx
src/components/ui/: basic.tsx
src/config/: branding.ts
src/lib/: AuthContext.tsx  SettingsContext.tsx  api.ts  utils.ts
src/pages/: AdminShell.tsx  Login.tsx  Members.tsx  WelcomeWizard.tsx
src/pages/admin/: AdminHome.tsx  ExternalLoans.tsx  Help.tsx  Investments.tsx  Loans.tsx  MemberProfile.tsx  Members.tsx  ProductEmi.tsx  Reports.tsx  Settings.tsx  Transactions.tsx
src/pages/admin/emi/: EmiCustomerProfile.tsx  EmiCustomers.tsx  EmiDashboard.tsx  EmiLoanProfile.tsx  EmiLoanStatement.tsx  EmiLoans.tsx  Vendors.tsx
src/types/: db.ts  html2pdf.d.ts
